--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "xcraft-server": "^2.0.0",
     "xcraft-core-log": "^1.0.0"
+  },
+  "devDependencies": {
+    "xcraft-dev-rules": "^0.1.3"
   }
 }
