--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "watt": "^3.3.0",
     "xcraft-core-log": "^1.0.0",
+    "xcraft-core-utils": "^1.1.0",
     "xcraft-server": "^3.0.0"
   },
   "devDependencies": {
