--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "watt": "^3.3.0",
+    "xcraft-core-bus": "^2.0.2",
     "xcraft-core-log": "^1.0.0",
     "xcraft-core-utils": "^1.1.0",
     "xcraft-server": "^3.0.0"
