--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "xcraft-server": "^3.0.0"
   },
   "devDependencies": {
-    "xcraft-dev-rules": "^0.2.0"
+    "xcraft-dev-rules": "^0.2.0",
+    "prettier": "1.12.1"
   }
 }
