--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "license": "MIT",
   "dependencies": {
     "gigawatts": "^4.0.1",
-    "v8-compile-cache":"^2.2.0",
+    "v8-compile-cache": "^2.2.0",
     "xcraft-core-bus": "^4.0.0",
     "xcraft-core-log": "^1.3.0",
     "xcraft-core-utils": "^3.0.0",
-    "xcraft-server": "^4.0.3"
+    "xcraft-server": "^4.0.3",
+    "yargs": "^16.2.0"
   },
   "devDependencies": {
     "prettier": "2.0.4",
