--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gigawatts": "^4.0.1",
     "v8-compile-cache": "^2.2.0",
     "xcraft-core-bus": "^4.0.0",
+    "xcraft-core-etc": "^2.1.0",
     "xcraft-core-log": "^1.3.0",
     "xcraft-core-utils": "^3.0.0",
     "xcraft-server": "^4.0.3",
