--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Multiple engines support for xcraft-server",
   "main": "lib/index.js",
   "bin": {
-    "xcraft-host": "./bin/host"
+    "xcraft-host": "bin/host"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
