--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "electron-default-menu": "^1.0.1",
+    "fs-extra": "^9.1.0",
     "gigawatts": "^4.0.1",
     "xcraft-core-bus": "^5.0.0",
     "xcraft-core-busclient": "^5.0.0",
