--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "yargs": "^16.2.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^5.2.0",
     "prettier": "2.0.4",
     "xcraft-dev-prettier": "^2.0.0",
     "xcraft-dev-rules": "^4.1.0"
