--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "epsitec-global-agent": "^3.0.0",
     "fs-extra": "^9.1.0",
     "gigawatts": "^4.0.1",
+    "node-forge": "^1.3.1",
     "xcraft-core-bus": "^5.0.0",
     "xcraft-core-busclient": "^5.0.0",
     "xcraft-core-etc": "^3.0.0",
