--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "license": "MIT",
   "dependencies": {
     "electron-default-menu": "^1.0.1",
-    "epsitec-global-agent": "^3.0.0",
     "fs-extra": "^9.1.0",
     "gigawatts": "^4.0.1",
     "node-forge": "^1.3.1",
@@ -24,6 +23,7 @@
     "xcraft-core-log": "^2.0.0",
     "xcraft-core-transport": "^4.0.0",
     "xcraft-core-utils": "^4.0.0",
+    "xcraft-global-agent": "^3.1.2",
     "xcraft-server": "^5.0.0",
     "yargs": "^16.2.0"
   },
