--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Epsitec SA",
+  "contributors": [
+    "Mathieu Schroeter <schroeter@epsitec.ch>",
+    "Samuel Loup <loup@epsitec.ch>",
+    "Gillian Fries <fries@epsitec.ch>",
+    "Jonny Quarta <quarta@epsitec.ch>",
+    "Catia Guidi <guidi@epsitec.ch>"
+  ],
   "license": "MIT",
   "dependencies": {
     "electron-default-menu": "^1.0.1",
