--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "electron-default-menu": "^1.0.1",
+    "epsitec-global-agent": "^3.0.0",
     "fs-extra": "^11.3.0",
     "gigawatts": "^4.0.1",
     "node-forge": "^1.3.1",
@@ -30,7 +31,6 @@
     "xcraft-core-log": "^2.2.0",
     "xcraft-core-transport": "^4.0.0",
     "xcraft-core-utils": "^4.0.0",
-    "xcraft-global-agent": "^3.1.2",
     "xcraft-server": "^5.0.0",
     "yargs": "^16.2.0"
   },
